[package]
name = "os"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sbi-rt = { version = "0.0.4" }
lazy_static = { version = "1.5.0", features = ["spin_no_std"] }
riscv = { version = "0.16", features = ["s-mode"] }
log = "0.4"

[profile.release]
debug = true
